# so100-hackathon

./: .gitignore  .typos.toml  README.md  UPSTREAM.md  lychee.toml  pixi.lerobot-override.txt  pyproject.toml  pyrefly.toml
.github/: pull_request_template.md
.github/workflows/: enforce_branch_name.yml  links.yml  python.yml
calibrations/: 58FA0919771.json  59090525971.json  59700738711.json  5A460830181.json  5A7A0186111.json  5A7A0186401.json  5AE60574961.json  5B141124981.json
data/so101_leader/: README.md
src/so100_hackathon/: __init__.py  blueprint.py  calibration.py  cameras.py  console.py  feetech.py  rerun_config.py  setup_phases.py  takes.py  urdf_arm.py  web_assets.py
src/so100_hackathon/apis/: calibrate.py  export_calibration.py  log_arms.py
tools/apps/: _export_lerobot_writer.py  calibrate_so100.py  dataset_collector.py  deploy_policy.py  export_calibration.py  export_lerobot.py  learn_site.py  log_so100.py  policy_server_molmoact2.py  query_dataset.py  realsense_debug.py  realsense_sudo_setup.py  record_episode.py  replay_episode.py  serve_rerun_control.py  so100_server.py
web/content/: collect.md  deploy.md  refine.md  set-up.md  train.md  welcome.md
web/static/: app.js  learn.css  learn2.css  learn2.js
