[project]
authors = [{name = "Rerun.io", email = "opensource@rerun.io"}]
dependencies = []
license = "MIT OR Apache-2.0"
name = "so100-hackathon"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/so100_hackathon"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"
rerun-sdk = "==0.33.1"
numpy = "*"
tyro = "*"
pyserial = "*"
py-opencv = "*"

[tool.pixi.pypi-dependencies]
so100_hackathon = { path = ".", editable = true }
feetech-servo-sdk = ">=1.0.0"
datafusion = ">=52,<53"

[tool.pixi.feature.dev.dependencies]
ruff = "*"
pytest = ">=8.0.0,<9"
beartype = ">=0.22.9"
pyrefly = "*"
vulture = "*"

[tool.pixi.feature.dev.activation.env]
PIXI_DEV_MODE = "1"

[tool.pixi.feature.dev.tasks.lint]
cmd = "ruff check ."
description = "Lint the package"

# Run first ruff fix, then ruff format, order is important see also https://twitter.com/charliermarsh/status/1717229721954799727
[tool.pixi.feature.dev.tasks.py-fmt]
cmd = "ruff check --fix . && ruff format ."
description = "Format the Python code"

[tool.pixi.feature.dev.tasks.py-fmt-check]
cmd = "ruff format --check . && ruff check ."
description = "Check formatting and lints of the Python code"

[tool.pixi.feature.dev.tasks.py-lint]
cmd = "pyrefly check src tools"
description = "Typecheck the Python code"

[tool.pixi.feature.dev.tasks.typecheck]
cmd = "pyrefly check src tools"
description = "Typecheck the package"

[tool.pixi.feature.dev.tasks.deadcode]
cmd = "vulture --config pyproject.toml"
description = "Find dead code in the package"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks.dataset-collector]
cmd = "python tools/apps/dataset_collector.py"
description = "Collect SO-100 datasets: host Rerun proxy + OSS web viewer + OSS catalog + control server; tee recordings to disk and register on stop"

[tool.pixi.tasks.log-so100]
cmd = "python tools/apps/log_so100.py"
description = "Stream live SO-100 arm telemetry into a Rerun viewer"

[tool.pixi.tasks.calibrate-so100]
cmd = "python tools/apps/calibrate_so100.py"
description = "Guided SO-100 calibration (match target poses shown in the viewer)"

[tool.pixi.tasks.teleop-so100]
cmd = "python tools/apps/log_so100.py --teleop --fps 60"
description = "Teleoperate: the follower arm mirrors the leader (torque ON), with full logging"

[tool.vulture]
paths = ["src/so100_hackathon", "tools"]
exclude = ["*/.pixi/*", "*/__pycache__/*", "*/build/*", "*/dist/*"]
sort_by_size = true
min_confidence = 60
# Framework-used names vulture can't see through: the tyro config field consumed via
# RerunTyroConfig.__post_init__, MotorTelemetry fields read dynamically via getattr in
# log_arms.METRICS, and the vendored RerunTyroConfig.rec_stream handle.
ignore_names = ["rr_config", "rec_stream", "speed_ticks_s", "load_pct", "voltage_v", "temperature_c", "current_ma"]

[tool.ruff]
line-length = 150
extend-exclude = [".pixi"]

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "SIM", "I"]
ignore = ["E501"]
